--- a/ClassBlazorApp1/Pages/Counter.razor
+++ b/ClassBlazorApp1/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@using ClassBlazorApp1.Entidades;
 
 <h1>Counter</h1>
 
@@ -13,4 +14,7 @@
     {
         currentCount++;
     }
+
+    
+   
 }
